# Aind.Behavior.ImplementationExample

./: .copier-answers.yml  Aind.Behavior.ImplementationExample.sln  README.md  pyproject.toml
.github/workflows/: aind-behavior-implementation-example-cicd.yml
bonsai/: Bonsai.config
docs/: api.rig.rst  api.task_logic.rst  conf.py  index.rst  json-schemas.rst
examples/: _mocks.py  behavior_launcher.py  clabe.yml  rig.py  session.py  task_logic.py
scripts/: launcher.ps1
src/: Extensions.csproj  main.bonsai
src/DataSchemas/: .gitkeep  aind_behavior_implementation_example.json
src/Extensions/: .gitkeep  AindBehaviorImplementationExample.Generated.cs  DisplayCalibration.bonsai
src/aind_behavior_implementation_example/: cli.py  launcher.py  regenerate.py  rig.py  task_logic.py
src/aind_behavior_implementation_example/data_contract/: __init__.py
src/aind_behavior_implementation_example/data_mappers/: __init__.py  _rig.py  _session.py
src/aind_behavior_implementation_example/data_qc/: __init__.py  data_qc.py
tests/: test_aind_data_mapper.py  test_bonsai.py
